# BTLibraryBased_Decision

./: .gitignore  README.md  Tips.md
src/Goal_action_server/: CMakeLists.txt  package.xml
src/Goal_action_server/launch/: goalActionServer.launch.py
src/Goal_action_server/src/: GoalActionServer.cpp  GoalActionServer_poses.cpp  test_client.cpp
src/base_interfaces_demo/: CMakeLists.txt  package.xml
src/base_interfaces_demo/action/: Nav.action
src/behaviortree_msgs/: CMakeLists.txt  package.xml
src/bt_test/: CMakeLists.txt  package.xml
src/bt_test/include/bt_test/: gain_blood_or_bullet.hpp  go_goal.hpp  go_pub.hpp
src/bt_test/src/: go_pub.cpp  go_server.cpp  test01.cpp  test02.cpp  tree.xml
src/click_doodle01/: CMakeLists.txt  package.xml
src/click_doodle01/include/click_doodle01/: Dark_knight.h  Green_Light.h  decision.h  testaction.h
src/click_doodle01/src/: clickdoodle02.cpp  clientBT.cpp  decision.cpp
src/click_doodle01/tree/: tree.xml
src/cpp07_exercise/: CMakeLists.txt  package.xml
src/cpp07_exercise/src/: Nav2.cpp  client.cpp  exe04_action_server.cpp
src/decision/decision_behavior_tree/: CMakeLists.txt  behavior_tree.xml  package.xml
src/decision/decision_behavior_tree/include/: behavior_tree_engine.hpp  condition_node.hpp  decision_node.hpp  go_pub.hpp  go_server.hpp
src/decision/decision_behavior_tree/include/action/: gain_blood_action.hpp  patrol_to_supply_action.hpp
src/decision/decision_behavior_tree/include/plugins/: condition_node.hpp
src/decision/decision_behavior_tree/include/plugins/action/: gain_blood_or_bullet_action.hpp  patrol_to_supply_action.hpp
src/decision/decision_behavior_tree/include/plugins/condition/: if_blood_sufficient.hpp  if_chassis_electric_condition.hpp
src/decision/decision_behavior_tree/plugins/action/: gain_blood_or_bullet_action.cpp
src/decision/decision_behavior_tree/plugins/condition/: if_chassis_electric_condition.cpp
src/decision/decision_behavior_tree/src/: decision_node.cpp  test00.cpp
src/decision/decision_behavior_tree/tree/: attackTree.xml  patrolTree.xml
src/decision/decision_behaviors/: CMakeLists.txt  package.xml
src/decision/params/: init.yaml  init_pose.yaml
src/fake_msg_publisher/: CMakeLists.txt  package.xml
src/fake_msg_publisher/src/: fake_msg_publisher.cpp
src/global_interfaces/: CMakeLists.txt  package.xml
src/global_interfaces/action/: BehaviorTreePose.action  Go.action
src/global_interfaces/msg/referee_system/: GameRelated.msg  GameRobotHP.msg  RobotRelated.msg
src/lib/BehaviorTree.CPP/: CMakeUserPresets.json
src/lib/BehaviorTree.CPP/examples/: t12_groot_howto.cpp
src/lib/BehaviorTree.CPP/src/: bt_factory.cpp  xml_parsing.cpp
src/my_msg_interface/: CMakeLists.txt  package.xml
src/rm_behavior_tree/: CMakeLists.txt  README.md  package.xml  test_tree.xml
src/rm_behavior_tree/config/: decision.yaml
src/rm_behavior_tree/include/RefereeSystem/: DataType.cpp  DataType.h  enums.h
src/rm_behavior_tree/include/rm_behavior_tree/: call_for_refereesystem.hpp  public.hpp  rm_behavior_tree.hpp
src/rm_behavior_tree/include/rm_behavior_tree/plugins/action/: armors_check.hpp  chassis_spin.hpp  fire_or_skip.hpp  gimbal_spin.hpp  nav2pose.hpp  pub_goal.hpp  send_goal.hpp  send_sentrycmd.hpp  set_own_status.hpp
src/rm_behavior_tree/include/rm_behavior_tree/plugins/condition/: check_aerial_cmd.hpp  check_armors.hpp  check_bullet.hpp  check_game_running.hpp  check_game_started.hpp  check_shooter_status.hpp  game_status_check.hpp  hp_check.hpp  is_arrived.hpp  is_dead_check.hpp  our_outpost_check.hpp  reborn_now.hpp  reset_res_data.hpp  set_enemy_goal.hpp  set_supply_goal.hpp  supply_zone_check.hpp  wait_action.hpp
src/rm_behavior_tree/launch/: rm_behavior_tree.launch.py
src/rm_behavior_tree/plugins/action/: armors_check.cpp  chassis_spin.cpp  fire_or_skip.cpp  gimbal_spin.cpp  nav2pose.cpp  pub_goal.cpp  send_goal.cpp  send_sentrycmd.cpp  set_own_status.cpp
src/rm_behavior_tree/plugins/condition/: check_aerial_cmd.cpp  check_armors.cpp  check_bullet.cpp  check_game_running.cpp  check_game_started.cpp  check_shooter_status.cpp  game_status_check.cpp  hp_check.cpp  is_arrived.cpp  is_dead_check.cpp  our_outpost_check.cpp  reborn_now.cpp  reset_res_data.cpp  set_enemy_goal.cpp  supply_zone_check.cpp  wait_action.cpp
src/rm_behavior_tree/src/: rm_behavior_tree.cpp
src/rm_behavior_tree/tree/: rmucTree.xml  rmucTreeA copy.xml  rmucTreeA.xml  rmucTreeB copy.xml  rmucTreeB.xml  rmucTreeC copy.xml  rmucTreeC.xml  rmucTreeD.xml  test_tree copy.xml  test_tree.xml
src/rm_decision_interfaces/: CMakeLists.txt  package.xml
src/rm_decision_interfaces/auto_aim_interfaces/: CMakeLists.txt
src/rm_decision_interfaces/global_interfaces/: CMakeLists.txt
src/rm_decision_interfaces/global_interfaces/action/: BehaviorTreeSendPoses.action
src/rm_decision_interfaces/msg/: SentryCmd.msg  Target.msg
src/rm_decision_interfaces/my_msg_interface/: CMakeLists.txt
src/rm_decision_interfaces/my_msg_interface/msg/: AerialCmd.msg  PowerHeat.msg  SentryCmd.msg
src/rm_decision_interfaces/my_msg_interface/srv/: RefereeMsg.srv
src/rmuc_decision/: CMakeLists.txt  package.xml
src/rmuc_decision/config/: decision.yaml
src/rmuc_decision/include/: call_for_refereesystem.hpp  condition.hpp  decision_node.hpp
src/rmuc_decision/include/action/: gain_blood_action.hpp  go_enemy_door.hpp  go_enemy_outpost.hpp  (+5 more)
src/rmuc_decision/launch/: decision.launch.py
src/rmuc_decision/src/: decision_node.cpp
src/rmuc_decision/tree/: Tree.xml
src/robot_decision/: CMakeLists.txt  behavior_tree.xml  package.xml
src/robot_decision/config/: condition.yaml  decision.yaml  goal_pose.yaml  init_pose.yaml
src/robot_decision/fsm/: fsm.hpp
src/robot_decision/include/: call_for_refereesystem.hpp  condition_node.hpp  decision_node.hpp  go_pub.hpp  go_server.hpp  set_tuoluo_status.hpp  structs.hpp  yamlsetup.h
src/robot_decision/launch/: decision.launch.py
src/robot_decision/src/: decision_node.cpp
src/robot_decision/tree/: attackTree.xml  mainTree.xml  patrolTree.xml  rmulTree.xml
(+17 files in other folders)
